--- a/styles/index.scss
+++ b/styles/index.scss
@@ -208,6 +208,10 @@ body {
   color: #666;
 }
 
+.categories {
+  justify-content: flex-end;
+}
+
 .card_categories {
   margin-top: 10px;
 }
@@ -226,7 +230,6 @@ body {
   font-size: 11px;
   padding: 3px;
   margin-right: 3px;
-  color: #fff;
   border-radius: 10px;
   background-color: #607d8b;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
@@ -235,6 +238,10 @@ body {
     font-size: 12px;
     padding: 5px;
     margin-right: 5px;
+  }
+
+  p {
+    color: #fff;
   }
 }
 
