--- a/styles/index.scss
+++ b/styles/index.scss
@@ -153,15 +153,15 @@ body {
   }
 }
 
-.container_listItem {
-  width: 100%;
-  margin: 20px 5px 0;
-  transition: 0.5s;
+// .container_listItem {
+//   width: 100%;
+//   margin: 20px 5px 0;
+//   transition: 0.5s;
 
-  &:hover {
-    background: #000;
-  }
-}
+//   &:hover {
+//     background: #000;
+//   }
+// }
 
 
 /*====================================
