--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,6 +59,18 @@ $breakpoints: ('smallMobile':'screen and (max-width: 375px)',
   color: #AD7370 !important;
 }
 
+.u-mt10 {
+  margin-top: 10px;
+}
+
+.u-mt20 {
+  margin-top: 20px;
+}
+
+.u-mt30 {
+  margin-top: 30px;
+}
+
 /*====================================
 
 	ページ枠,ナビ
@@ -299,6 +311,41 @@ body {
     margin: 0 auto;
     width: 80%;
   }
+}
+
+/*buttonコンポーネント*/
+
+.c-button {
+  text-align: center;
+}
+
+.c-button_inner {
+  cursor: pointer;
+  display: inline-block;
+  max-width: 100%;
+  background: #6A5E76;
+  padding: 10px 30px;
+  font-size: 1rem;
+  text-align: center;
+  text-decoration: none;
+  width: 150px;
+  border: none;
+  color: #ffffff;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  text-shadow: none;
+  transition: 0.2s;
+}
+
+.c-button_inner:hover:not(:disabled) {
+  background: #fff;
+  border-color: currentColor;
+  color: #6A5E76;
+}
+
+.c-button_inner:disabled {
+  background: #ccc;
+  cursor: auto;
 }
 
 /*====================================
