--- a/styles/index.scss
+++ b/styles/index.scss
@@ -80,7 +80,7 @@ $breakpoints: ('smallMobile':'screen and (max-width: 375px)',
 html,
 body {
   height: 100%;
-  font-family: Nunito, sans-serif;
+  font-family: Alegreya, sans-serif;
   background-color: #f4f7f9;
 }
 
