--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -193,8 +193,12 @@ a {
   color: #000;
 }
 
+button{
+  font-family: inherit;
+}
+
 html,
 body {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
 }
