rename Intro component to Introduce

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -108,6 +108,10 @@ body {
   }
 }
 
+.introduce{
+  margin-top: 20px;
+}
+
 /*====================================
 
 	container(トップページのリストカードの枠)
@@ -221,6 +225,7 @@ body {
 }
 
 .categories {
+  margin-top: 20px;
   justify-content: flex-end;
 }
 
