make preview mode

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -147,6 +147,10 @@ body {
   font-size: 26px;
 }
 
+.previewAlert{
+  padding:20px 30px;
+}
+
 /*====================================
 
 	container(トップページのリストカードの枠)
